Swtich docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@
 ## Defines images and working directory.
 defaults: &defaults
   docker:
-    - image: juampynr/drupal8ci:latest
+    # - image: juampynr/drupal8ci:latest
+    - image: kxwang/drupal-ci:circleci
     - image: selenium/standalone-chrome-debug:3.7.1-beryllium
   working_directory: /var/www/html
 
