--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@
 defaults: &defaults
   docker:
     # - image: juampynr/drupal8ci:latest
+    # updated CI image
     - image: kxwang/drupal-ci:circleci
     - image: selenium/standalone-chrome-debug:3.7.1-beryllium
   working_directory: /var/www/html
