POWR-86 Double quotes for drush optiosn.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ behat_tests: &behat_tests
             # terminus drush portlandor.dev -- sql-sanitize -y
             # Clear cache
             sleep 40s
-            terminus remote:drush portlandor.dev -- cim -y && terminus remote:drush portlandor.dev -- cr && terminus remote:drush portlandor.dev -- php-eval 'node_access_rebuild();'
+            terminus remote:drush portlandor.dev -- cim -y && terminus remote:drush portlandor.dev -- cr && terminus remote:drush portlandor.dev -- php-eval "node_access_rebuild();"
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
             # Example: Merge pull request #35 from eGovPDX/powr-152
@@ -120,7 +120,7 @@ behat_tests: &behat_tests
             # The following two drush commands will fail without wait for a few seconds
             sleep 40s
             # Clear cache. Import config files
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && terminus remote:drush portlandor.$CIRCLE_BRANCH -- php-eval 'node_access_rebuild();'
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && terminus remote:drush portlandor.$CIRCLE_BRANCH -- php-eval "node_access_rebuild();"
           fi
     - run:
         name: Run tests against Pantheon
