POWR-86 Run drush php-script correctly.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ behat_tests: &behat_tests
             # Clear cache
             sleep 40s
             terminus remote:drush portlandor.dev -- cim -y && terminus remote:drush portlandor.dev -- cr
-            terminus remote:drush portlandor.dev -- php-script "node_access_rebuild();"
+            echo 'node_access_rebuild();' | $(terminus remote:drush portlandor.dev -- php-script)
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
             # Example: Merge pull request #35 from eGovPDX/powr-152
@@ -122,7 +122,7 @@ behat_tests: &behat_tests
             sleep 40s
             # Clear cache. Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- php-script "node_access_rebuild();"
+            echo 'node_access_rebuild();' | $(terminus remote:drush portlandor.$CIRCLE_BRANCH -- php-script)
           fi
     - run:
         name: Run tests against Pantheon
