--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,7 +122,7 @@ behat_tests: &behat_tests
             sleep 40s
             # Clear cache. Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
-            echo 'node_access_rebuild();' | $(terminus remote:drush portlandor.$CIRCLE_BRANCH -- php-script)
+            echo 'node_access_rebuild();' | $(terminus drush portlandor.$CIRCLE_BRANCH -- php-script)
           fi
     - run:
         name: Run tests against Pantheon
