POWR-189 Make parent group in My Content view sortable.

--- a/web/sites/default/config/views.view.my_content.yml
+++ b/web/sites/default/config/views.view.my_content.yml
@@ -79,8 +79,8 @@ display:
           summary: ''
           description: ''
           columns:
-            node_bulk_form: node_bulk_form
             title: title
+            gid: gid
             type: type
             status: status
             created: created
@@ -88,12 +88,14 @@ display:
             edit_node: edit_node
             delete_node: delete_node
           info:
-            node_bulk_form:
+            title:
+              sortable: true
+              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            title:
+            gid:
               sortable: true
               default_sort_order: asc
               align: ''
