POWR-86 Use Chosen for tags.

--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.group.project.field_topics
     - group.type.project
   module:
+    - chosen_field
     - datetime_range
 id: group.project.default
 targetEntityType: group
@@ -19,12 +20,9 @@ mode: default
 content:
   field_audience:
     weight: 5
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   field_date_time_range:
     weight: 3
@@ -58,12 +56,9 @@ content:
     region: content
   field_topics:
     weight: 6
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   label:
     type: string_textfield
