--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ behat_tests: &behat_tests
         command: |
           # Remove any remaining dependencies. Install all packages form package.json 
           composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
-          rm -rf vendor web/core web/vendor web/modules/contrib web/themes/contrib && composer install --no-interaction
+          rm -rf vendor web/core web/vendor web/modules/contrib web/themes/contrib && composer install --no-suggest --no-interaction
           # TODO: should only deploy non-dev packages
           # --no-dev
     - run:
