Hotfix-7 correct a merge error from POWR-215 and add app to gitignore.

--- a/web/sites/default/config/field.field.paragraph.fax_button.field_fax_number.yml
+++ b/web/sites/default/config/field.field.paragraph.fax_button.field_fax_number.yml
@@ -7,6 +7,10 @@ dependencies:
     - paragraphs.paragraphs_type.fax_button
   module:
     - telephone
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.fax_button.field_fax_number
 field_name: field_fax_number
 entity_type: paragraph
