--- a/web/sites/default/config/system.site.yml
+++ b/web/sites/default/config/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 191eddb9-0929-4dbd-bbfa-3f97bf1d93e0
-name: 'Portland Oregon GREAT!!!'
+name: 'Portland Oregon again'
 mail: joshua.mitchell@portlandoregon.gov
 slogan: test
 page:
