--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,8 +132,9 @@ behat_tests: &behat_tests
             # Only do force push when the multidev site doesn't exist
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt;  then
               rm -rf ./env_list.txt
-              git pull -s recursive -X ours pantheon $CIRCLE_BRANCH --no-edit
-              git push pantheon $CIRCLE_BRANCH
+              # git pull -s recursive -X ours pantheon $CIRCLE_BRANCH --no-edit
+              # git push pantheon $CIRCLE_BRANCH
+              git push -f pantheon $CIRCLE_BRANCH
             else
               rm -rf ./env_list.txt
               git push -f pantheon $CIRCLE_BRANCH
