Sleep after push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,6 +135,7 @@ behat_tests: &behat_tests
               # git pull -s recursive -X ours pantheon $CIRCLE_BRANCH --no-edit
               # git push pantheon $CIRCLE_BRANCH
               git push -f pantheon $CIRCLE_BRANCH
+              terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 30s
             else
               rm -rf ./env_list.txt
               git push -f pantheon $CIRCLE_BRANCH
