--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ behat_tests: &behat_tests
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt;  then
               rm -rf ./env_list.txt
               git pull -s ours pantheon $CIRCLE_BRANCH --no-edit
-              git push pantheon $CIRCLE_BRANCH
+              git -f push pantheon $CIRCLE_BRANCH
               # git push -f pantheon $CIRCLE_BRANCH
               # terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 30s
             else
