--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,7 @@ behat_tests: &behat_tests
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt;  then
               rm -rf ./env_list.txt
               # git pull -s ours pantheon $CIRCLE_BRANCH --no-edit
+              git fetch pantheon $CIRCLE_BRANCH
               git rebase --strategy=theirs pantheon $CIRCLE_BRANCH
               git push pantheon $CIRCLE_BRANCH
               # git push -f pantheon $CIRCLE_BRANCH
