Update strategy option

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,7 +134,7 @@ behat_tests: &behat_tests
               rm -rf ./env_list.txt
               # git pull -s ours pantheon $CIRCLE_BRANCH --no-edit
               git fetch pantheon $CIRCLE_BRANCH
-              git rebase --strategy=theirs pantheon/$CIRCLE_BRANCH
+              git rebase -X theirs pantheon/$CIRCLE_BRANCH
               git push pantheon $CIRCLE_BRANCH
               # git push -f pantheon $CIRCLE_BRANCH
               # terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 30s
