skip DB/files cloning

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,8 @@ behat_tests: &behat_tests
               echo "Found multidev site"
               # terminus multidev:delete --delete-branch portlandor.$CIRCLE_BRANCH -y
               # Cloning files and DB from TEST environment to the multidev environment
-              terminus env:clone-content portlandor.test "$CIRCLE_BRANCH" -y 
+              # Do we need to clone DB/file every time for existing multidev?
+              # terminus env:clone-content portlandor.test "$CIRCLE_BRANCH" -y 
             else
               echo "Creating new multidev site. This may take a few seconds." && terminus multidev:create portlandor.test $CIRCLE_BRANCH
             fi
