Test git rebase with config and file changes

--- a/web/modules/custom/portland/portland.info.yml
+++ b/web/modules/custom/portland/portland.info.yml
@@ -1,4 +1,4 @@
-name: Portland Module
+name: Portland Module CircleCI!!
 description: A module for custom functionality in the Portland OR site.
 package: Custom
 type: module
