POWR-86 Add shortname field to Program and Project

--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.group.program.field_audience
+    - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
@@ -47,4 +48,5 @@ content:
 hidden:
   changed: true
   created: true
+  field_shortname_or_acronym: true
   uid: true
