--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
+    - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
@@ -60,4 +61,5 @@ content:
 hidden:
   changed: true
   created: true
+  field_shortname_or_acronym: true
   uid: true
