--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.group.program.field_audience
+    - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
@@ -15,13 +16,21 @@ bundle: program
 mode: default
 content:
   field_audience:
-    weight: 4
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_shortname_or_acronym:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_summary:
-    weight: 3
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -29,7 +38,7 @@ content:
     region: content
     type: string_textarea
   field_topics:
-    weight: 5
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
