--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
+    - field.field.group.project.field_shortname_or_acronym
     - field.field.group.project.field_summary
     - field.field.group.project.field_topics
     - group.type.project
@@ -17,19 +18,27 @@ bundle: project
 mode: default
 content:
   field_audience:
-    weight: 5
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_date_time_range:
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: daterange_default
     region: content
+  field_shortname_or_acronym:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_summary:
-    weight: 4
+    weight: 3
     settings:
       placeholder: ''
       rows: 5
@@ -37,7 +46,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 6
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
