--- a/web/sites/default/config/pathauto.pattern.group_title.yml
+++ b/web/sites/default/config/pathauto.pattern.group_title.yml
@@ -10,15 +10,17 @@ label: 'Group title'
 type: 'canonical_entities:group'
 pattern: '[group:field_shortname_or_acronym]'
 selection_criteria:
-  482260f0-60eb-4d51-ac20-c7d412ff818d:
+  cd286027-f777-4c56-8dda-8eddacd5f1d6:
     id: 'entity_bundle:group'
     bundles:
       bureau_office: bureau_office
       elected_official: elected_official
+      program: program
+      project: project
     negate: false
     context_mapping:
       group: group
-    uuid: 482260f0-60eb-4d51-ac20-c7d412ff818d
+    uuid: cd286027-f777-4c56-8dda-8eddacd5f1d6
 selection_logic: and
 weight: -10
 relationships: {  }
