add sleep after git push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,6 +137,7 @@ behat_tests: &behat_tests
               git fetch pantheon $CIRCLE_BRANCH
               git rebase -X theirs pantheon/$CIRCLE_BRANCH
               git push pantheon $CIRCLE_BRANCH
+              sleep 5s
               # git push -f pantheon $CIRCLE_BRANCH
               # terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 30s
             else
