--- a/composer.json
+++ b/composer.json
@@ -70,13 +70,19 @@
         "wikimedia/composer-merge-plugin": "^1.4"
     },
     "require-dev": {
-        "behat/mink": "~1.7",
+        "behat/behat": "^3.4",
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "v2.2",
         "behat/mink-goutte-driver": "~1.2",
+        "behat/mink-selenium2-driver": "^1.3",
+        "bex/behat-screenshot": "^1.2",
         "drupal/admin_toolbar": "^1.18",
         "drupal/coder": "^8.2",
         "drupal/devel": "^1.2",
+        "drupal/drupal-extension": "^3.4",
         "drupal/kint": "^1.2",
         "drupal/masquerade": "2.0.0-beta2",
+        "guzzlehttp/guzzle": "^6.0@dev",
         "jcalderonzumba/gastonjs": "~1.0.2",
         "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
         "mikey179/vfsstream": "~1.2",
