POWR-153 Added summary field and moved time to complete outsite of service modes

--- a/web/sites/default/config/field.field.node.city_service.field_time_to_complete.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_time_to_complete.yml
@@ -1,20 +1,20 @@
-uuid: aee310ce-6a05-4bb1-9759-a3580beee482
+uuid: 3194dbb2-9a2b-4df1-a753-a84697656198
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_time_to_complete
-    - paragraphs.paragraphs_type.service_mode
+    - field.storage.node.field_time_to_complete
+    - node.type.city_service
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: paragraph.service_mode.field_time_to_complete
+id: node.city_service.field_time_to_complete
 field_name: field_time_to_complete
-entity_type: paragraph
-bundle: service_mode
+entity_type: node
+bundle: city_service
 label: 'Time to complete'
 description: 'How long should it take to complete the step by step instructions to obtain this service? Provide an estimate that helps the community plan accordingly. Use customer service data to create your estimate if available.'
 required: false
