--- a/web/sites/default/config/field.storage.node.field_time_to_complete.yml
+++ b/web/sites/default/config/field.storage.node.field_time_to_complete.yml
@@ -1,12 +1,12 @@
-uuid: cab0a8a6-fe10-4a9d-af37-6f9de1cebbf7
+uuid: d036d7f1-75ad-46c5-93bb-87786059a330
 langcode: en
 status: true
 dependencies:
   module:
-    - paragraphs
-id: paragraph.field_time_to_complete
+    - node
+id: node.field_time_to_complete
 field_name: field_time_to_complete
-entity_type: paragraph
+entity_type: node
 type: string
 settings:
   max_length: 255
