--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -7,12 +7,13 @@ dependencies:
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_related_services
     - field.field.node.city_service.field_service_mode
+    - field.field.node.city_service.field_summary
+    - field.field.node.city_service.field_time_to_complete
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
     - chosen_field
     - content_moderation
-    - datetime
     - paragraphs
     - path
 id: node.city_service.default
@@ -22,24 +23,24 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 6
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   field_audience:
-    weight: 2
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_community_actions:
-    weight: 1
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_related_services:
-    weight: 26
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -49,7 +50,7 @@ content:
     region: content
   field_service_mode:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -59,21 +60,37 @@ content:
       default_paragraph_type: service_mode
     third_party_settings: {  }
     region: content
+  field_summary:
+    weight: 1
+    settings:
+      rows: 3
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
+  field_time_to_complete:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_topics:
-    weight: 3
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 11
+    weight: 12
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -81,7 +98,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 9
     region: content
     third_party_settings: {  }
   scheduled_publication:
@@ -94,14 +111,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 12
+    weight: 13
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 10
     region: content
     third_party_settings: {  }
   title:
@@ -114,7 +131,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -122,7 +139,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
