--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -7,6 +7,8 @@ dependencies:
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_related_services
     - field.field.node.city_service.field_service_mode
+    - field.field.node.city_service.field_summary
+    - field.field.node.city_service.field_time_to_complete
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
@@ -25,7 +27,7 @@ bundle: city_service
 mode: default
 content:
   field_audience:
-    weight: 3
+    weight: 5
     label: above
     settings:
       link: true
@@ -33,7 +35,7 @@ content:
     type: entity_reference_label
     region: content
   field_community_actions:
-    weight: 1
+    weight: 3
     label: hidden
     settings:
       link: true
@@ -41,7 +43,7 @@ content:
     type: entity_reference_label
     region: content
   field_related_services:
-    weight: 4
+    weight: 6
     label: above
     settings:
       link: true
@@ -50,15 +52,31 @@ content:
     region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
-    weight: 0
+    weight: 2
     label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     region: content
+  field_summary:
+    weight: 0
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_time_to_complete:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_topics:
-    weight: 2
+    weight: 4
     label: hidden
     settings:
       link: true
