--- a/web/themes/custom/rain/.gitignore
+++ b/web/themes/custom/rain/.gitignore
@@ -5,11 +5,11 @@ build
 
 # Pattern Lab (ignored initially)
 pattern-lab
-**/bem.function.php
+# **/bem.function.php
 
 # Twig helper functions
-**/add_attributes.function.php
-**/bem.function.php
+# **/add_attributes.function.php
+# **/bem.function.php
 
 # NPM
 node_modules
