--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -133,6 +133,7 @@ theme:
   adminimal_theme: 0
   bootstrap_barrio: 0
   stormy: 0
+  rain: 0
 profile: lightning
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
