POWR-183 Added a custom module for using cleave.js for telephone widgets

--- a/web/sites/default/config/core.entity_form_display.paragraph.telephone_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.telephone_button.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.paragraph.telephone_button.field_phone_number
     - paragraphs.paragraphs_type.telephone_button
   module:
-    - telephone
+    - cleave
 id: paragraph.telephone_button.default
 targetEntityType: paragraph
 bundle: telephone_button
@@ -16,8 +16,9 @@ content:
     weight: 0
     settings:
       placeholder: ''
+      country: US
     third_party_settings: {  }
-    type: telephone_default
+    type: telephone_cleave
     region: content
 hidden:
   created: true
