POWR-182 first big commit of changes for a guide content type.

--- a/web/sites/default/config/field.storage.node.field_related_content.yml
+++ b/web/sites/default/config/field.storage.node.field_related_content.yml
@@ -1,11 +1,11 @@
-uuid: 75cdea69-48e8-49d5-84ef-49d412b9298a
+uuid: 060ffede-6331-433b-b9bd-757bc5cb302a
 langcode: en
 status: true
 dependencies:
   module:
     - node
-id: node.field_related_services
-field_name: field_related_services
+id: node.field_related_content
+field_name: field_related_content
 entity_type: node
 type: entity_reference
 settings:
