--- a/web/sites/default/config/user.role.layout_manager.yml
+++ b/web/sites/default/config/user.role.layout_manager.yml
@@ -13,5 +13,6 @@ permissions:
   - 'administer panelizer'
   - 'administer panelizer node building defaults'
   - 'administer panelizer node city_service defaults'
+  - 'administer panelizer node guide defaults'
   - 'administer panelizer node information defaults'
   - 'administer panelizer node service_location defaults'
