--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "drupal/facets": "1.x-dev",
         "drupal/field_group": "^1.0",
         "drupal/group": "^1.0",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/lightning_media": "~2.1",
         "drupal/link_class": "^1.3",
         "drupal/page_manager": "^4.0@beta",
