--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -32,6 +32,7 @@ module:
   embed: 0
   entity_block: 0
   entity_browser: 0
+  entity_browser_entity_form: 0
   entity_embed: 0
   entity_reference: 0
   entity_reference_revisions: 0
@@ -47,6 +48,7 @@ module:
   image: 0
   image_widget_crop: 0
   inline_entity_form: 0
+  inline_form_errors: 0
   jsonapi: 0
   kint: 0
   layout_discovery: 0
