--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -1,10 +1,10 @@
-uuid: ced039fe-dfe4-4e67-bfe6-dba077d4bdf1
+uuid: 32392c70-b7ab-4043-aab8-bdb1530e88b5
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_body
-    - node.type.information
+    - node.type.guide
     - paragraphs.paragraphs_type.simple_text
   module:
     - custom_add_another
@@ -13,14 +13,14 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.information.field_body
+id: node.guide.field_body
 field_name: field_body
 entity_type: node
-bundle: information
+bundle: guide
 label: Body
 description: 'In the body, you can add text, media or columns. Columns will layout content for the desktop side by side and stacked on a mobile device.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -31,7 +31,7 @@ settings:
       simple_text: simple_text
     target_bundles_drag_drop:
       email_button:
-        weight: 10
+        weight: 9
         enabled: false
       fax_button:
         weight: 10
