--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -12,13 +12,20 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  - 'view group'
-  - 'leave group'
-  - 'access group_node overview'
-  - 'create group_node:city_service entity'
-  - 'delete own group_node:city_service entity'
-  - 'update any group_node:city_service entity'
-  - 'update own group_node:city_service entity'
-  - 'view group_node:city_service entity'
-  - 'view unpublished group_node:city_service entity'
-  - 'delete any group_node:city_service entity'
+  0: 'view group'
+  1: 'leave group'
+  2: 'access group_node overview'
+  3: 'create group_node:city_service entity'
+  4: 'delete own group_node:city_service entity'
+  5: 'update any group_node:city_service entity'
+  6: 'update own group_node:city_service entity'
+  7: 'view group_node:city_service entity'
+  8: 'view unpublished group_node:city_service entity'
+  9: 'delete any group_node:city_service entity'
+  13: 'create group_node:guide entity'
+  14: 'delete any group_node:guide entity'
+  15: 'delete own group_node:guide entity'
+  16: 'update any group_node:guide entity'
+  17: 'update own group_node:guide entity'
+  18: 'view group_node:guide entity'
+  19: 'view unpublished group_node:guide entity'
