--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -124,3 +124,5 @@ facets: 0.0.0
 swiftype_integration: 0.0.0
 custom_add_another: 1.0.0-beta1
 datetime_range: 0.0.0
+inline_form_errors: 0.0.0
+entity_browser_entity_form: 0.0.0
