--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -27,6 +27,7 @@ field_settings:
           building: default
           service_location: default
           information: default
+          guide: default
   label:
     label: Label
     property_path: aggregated_field
@@ -65,17 +66,9 @@ datasource_settings:
       default: true
       selected: {  }
 processor_settings:
-  ignorecase:
-    fields:
-      - rendered
-      - label
-    weights:
-      preprocess_index: -9
-      preprocess_query: -8
-    all_fields: false
-  content_access:
-    weights:
-      preprocess_query: -10
+  rendered_item: {  }
+  add_url: {  }
+  aggregated_field: {  }
   tokenizer:
     fields:
       - rendered
@@ -131,8 +124,14 @@ processor_settings:
       preprocess_index: -5
       preprocess_query: -4
     all_fields: false
-  add_url: {  }
-  rendered_item: {  }
+  ignorecase:
+    fields:
+      - rendered
+      - label
+    weights:
+      preprocess_index: -9
+      preprocess_query: -8
+    all_fields: false
   transliteration:
     fields:
       - rendered
@@ -141,6 +140,9 @@ processor_settings:
       preprocess_index: -4
       preprocess_query: -3
     all_fields: false
+  content_access:
+    weights:
+      preprocess_query: -10
   html_filter:
     fields:
       - rendered
@@ -157,7 +159,6 @@ processor_settings:
       preprocess_index: -10
       preprocess_query: -9
     all_fields: false
-  aggregated_field: {  }
 tracker_settings:
   default:
     indexing_order: fifo
