POWR-211 Uncomment the wait for DEV to be ready

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,7 +100,7 @@ behat_tests: &behat_tests
             # terminus env:clone-content portlandor.test dev
             # Don't need to wait for DEV because it's always up?
             # Wake up the DEV site and must wait for 30s
-            # terminus env:wake portlandor.dev && sleep 30s
+            terminus env:wake portlandor.dev && sleep 30s
             terminus remote:drush portlandor.dev -- cim -y && terminus remote:drush portlandor.dev -- cr
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
