--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/ds": "^3.1",
         "drupal/eva": "^1.3",
-        "drupal/facets": "1.x-dev",
+        "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
         "drupal/group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
