--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,10 @@ behat_tests: &behat_tests
     - run:
         name: Composer install
         command: |
+          # Pantheon don't allow these folders but Composer needs them
+          mv ./vendor/drupal/coder/.git.orig ./vendor/drupal/coder/.git
+          mv ./web/modules/contrib/facets/.git.orig ./web/modules/contrib/facets/.git
+          mv ./web/modules/contrib/search_api_solr/.git.orig ./web/modules/contrib/search_api_solr/.git
           # Remove any remaining dependencies. Install all packages form package.json 
           composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
           # rm -rf vendor web/core web/vendor web/modules/contrib web/themes/contrib
@@ -84,7 +88,9 @@ behat_tests: &behat_tests
           git remote add pantheon ssh://codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629@codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629.drush.in:2222/~/repository.git
           git config --global user.email "$eGov_Email"
           # Without these lines, push will fail with "please remote git submodules" error
-          rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
+          mv ./vendor/drupal/coder/.git ./vendor/drupal/coder/.git.orig
+          mv ./web/modules/contrib/facets/.git ./web/modules/contrib/facets/.git.orig
+          mv ./web/modules/contrib/search_api_solr/.git ./web/modules/contrib/search_api_solr/.git.orig
           git add -f /var/www/html
           # Pantheon site will use the wrong DB if the local is kept
           git rm --cache  web/sites/default/settings.local.php --ignore-unmatch
