POWR-182 Remove facets folder to force reinstall.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,9 +64,9 @@ behat_tests: &behat_tests
         name: Composer install
         command: |
           # Pantheon don't allow these folders but Composer needs them
-          mv ./vendor/drupal/coder/.git.orig ./vendor/drupal/coder/.git
-          mv ./web/modules/contrib/facets/.git.orig ./web/modules/contrib/facets/.git
-          mv ./web/modules/contrib/search_api_solr/.git.orig ./web/modules/contrib/search_api_solr/.git
+          #rm -rf ./vendor/drupal/coder
+          rm -rf ./web/modules/contrib/facets
+          #rm -rf ./web/modules/contrib/search_api_solr
           # Remove any remaining dependencies. Install all packages form package.json 
           composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
           # rm -rf vendor web/core web/vendor web/modules/contrib web/themes/contrib
