--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,9 +88,7 @@ behat_tests: &behat_tests
           git remote add pantheon ssh://codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629@codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629.drush.in:2222/~/repository.git
           git config --global user.email "$eGov_Email"
           # Without these lines, push will fail with "please remote git submodules" error
-          mv ./vendor/drupal/coder/.git ./vendor/drupal/coder/.git.orig
-          mv ./web/modules/contrib/facets/.git ./web/modules/contrib/facets/.git.orig
-          mv ./web/modules/contrib/search_api_solr/.git ./web/modules/contrib/search_api_solr/.git.orig
+          rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git 
           git add -f /var/www/html
           # Pantheon site will use the wrong DB if the local is kept
           git rm --cache  web/sites/default/settings.local.php --ignore-unmatch
