--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -26,30 +26,6 @@ targetEntityType: node
 bundle: city_service
 mode: default
 content:
-  field_audience:
-    weight: 5
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_community_actions:
-    weight: 3
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_related_services:
-    weight: 6
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
     weight: 2
@@ -75,14 +51,10 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_topics:
-    weight: 4
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
 hidden:
+  field_audience: true
+  field_community_actions: true
+  field_related_services: true
+  field_topics: true
   links: true
   scheduled_publication: true
