--- a/web/themes/custom/rain/package.json
+++ b/web/themes/custom/rain/package.json
@@ -3,11 +3,50 @@
   "description": "Project template for Drupal 8 themes",
   "version": "1.0.0",
   "devDependencies": {
-    "emulsify-gulp": "fourkitchens/emulsify-gulp#v2.1.0",
-    "gulp": "^3.9.1"
+    "browser-sync": "^2.24.4",
+    "gulp": "^3.9.1",
+    "gulp-help": "^1.6.1",
+    "gulp-ruby-sass": "^3.0.0",
+    "gulp-sass": "^4.0.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-minify": "^0.2.0",
+    "breakpoint-sass": "^2.7.0",
+    "del": "^3.0.0",
+    "eslint": "^4.3.0",
+    "gh-pages": "^1.1.0",
+    "glob": "^7.0.3",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^7.0.0",
+    "gulp-cached": "^1.1.0",
+    "gulp-clean-css": "^3.7.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-if": "^2.0.1",
+    "gulp-imagemin": "^3.3.0",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass-glob": "^1.0.6",
+    "gulp-sass-lint": "^1.1.1",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-spawn": "^0.4.0",
+    "gulp-stylelint": "^4.0.0",
+    "gulp-svg-sprite": "^1.3.1",
+    "js-yaml": "^3.6.1",
+    "lodash": "^4.17.4",
+    "ngrok": "^2.2.2",
+    "node-normalize-scss": "^3.0.0",
+    "node-notifier": "^5.1.2",
+    "portscanner": "^2.1.1",
+    "pre-commit": "^1.2.2",
+    "psi": "^3.0.0",
+    "singularitygs": "^1.7.0",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "webpagetest": "^0.3.4"
   },
   "scripts": {
-    "start": "gulp clean && gulp compile && gulp theme",
+    "start": "gulp css",
     "postinstall": "./scripts/pattern_lab.sh && ./scripts/twig_functions.sh"
   },
   "precommit.silent": true
