POWR-87 Add news content type

--- a/web/sites/default/config/pathauto.pattern.group_content.yml
+++ b/web/sites/default/config/pathauto.pattern.group_content.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   module:
+    - ctools
     - group
 _core:
   default_config_hash: rk2G0ozgUlKP7ic1RRjMcXUmeZxXUKPV-q-brekIKMc
@@ -10,7 +11,15 @@ id: group_content
 label: 'Group content'
 type: 'canonical_entities:group_content'
 pattern: 'group/[group_content:group:id]/[group_content:pretty-path-key]/[group_content:id]'
-selection_criteria: {  }
+selection_criteria:
+  caa4d6df-9e71-454f-8213-e7c60e41b5f8:
+    id: 'entity_bundle:group_content'
+    bundles:
+      bureau_office-group_node-news: bureau_office-group_node-news
+    negate: false
+    context_mapping:
+      group_content: group_content
+    uuid: caa4d6df-9e71-454f-8213-e7c60e41b5f8
 selection_logic: and
 weight: -8
 relationships:
