--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -27,6 +27,7 @@ field_settings:
           building: default
           service_location: default
           information: default
+          news: default
   label:
     label: Label
     property_path: aggregated_field
@@ -65,6 +66,27 @@ datasource_settings:
       default: true
       selected: {  }
 processor_settings:
+  add_url: {  }
+  aggregated_field: {  }
+  content_access:
+    weights:
+      preprocess_query: -10
+  html_filter:
+    fields:
+      - rendered
+      - label
+    title: true
+    alt: true
+    tags:
+      h1: 5
+      h2: 3
+      h3: 2
+      strong: 2
+      b: 2
+    weights:
+      preprocess_index: -10
+      preprocess_query: -9
+    all_fields: false
   ignorecase:
     fields:
       - rendered
@@ -73,20 +95,7 @@ processor_settings:
       preprocess_index: -9
       preprocess_query: -8
     all_fields: false
-  content_access:
-    weights:
-      preprocess_query: -10
-  tokenizer:
-    fields:
-      - rendered
-      - label
-    spaces: ''
-    overlap_cjk: 1
-    minimum_word_size: '3'
-    weights:
-      preprocess_index: -6
-      preprocess_query: -5
-    all_fields: false
+  rendered_item: {  }
   stopwords:
     fields:
       - rendered
@@ -131,8 +140,17 @@ processor_settings:
       preprocess_index: -5
       preprocess_query: -4
     all_fields: false
-  add_url: {  }
-  rendered_item: {  }
+  tokenizer:
+    fields:
+      - rendered
+      - label
+    spaces: ''
+    overlap_cjk: 1
+    minimum_word_size: '3'
+    weights:
+      preprocess_index: -6
+      preprocess_query: -5
+    all_fields: false
   transliteration:
     fields:
       - rendered
@@ -141,23 +159,6 @@ processor_settings:
       preprocess_index: -4
       preprocess_query: -3
     all_fields: false
-  html_filter:
-    fields:
-      - rendered
-      - label
-    title: true
-    alt: true
-    tags:
-      h1: 5
-      h2: 3
-      h3: 2
-      strong: 2
-      b: 2
-    weights:
-      preprocess_index: -10
-      preprocess_query: -9
-    all_fields: false
-  aggregated_field: {  }
 tracker_settings:
   default:
     indexing_order: fifo
