--- a/web/sites/default/config/user.role.layout_manager.yml
+++ b/web/sites/default/config/user.role.layout_manager.yml
@@ -14,4 +14,5 @@ permissions:
   - 'administer panelizer node building defaults'
   - 'administer panelizer node city_service defaults'
   - 'administer panelizer node information defaults'
+  - 'administer panelizer node news defaults'
   - 'administer panelizer node service_location defaults'
