POWR-87 Add no-rename to git rebase.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,7 @@ behat_tests: &behat_tests
               rm -rf ./env_list.txt
               # Get the tree from Pantheon. Rebase the CircleCI local repo on top of Pantheon. Push the new branch to Pantheon.
               git fetch pantheon $CIRCLE_BRANCH
-              git rebase -X theirs pantheon/$CIRCLE_BRANCH
+              git rebase -X theirs -X no-renames pantheon/$CIRCLE_BRANCH
               git push pantheon $CIRCLE_BRANCH
               # Pantheon appears to need a short delay. Otherwise some files are not picked up by drush cim.
               sleep 10s
