--- a/web/themes/custom/rain/.gitignore
+++ b/web/themes/custom/rain/.gitignore
@@ -1,6 +1,9 @@
 # Ignore compiled files.
-vendor
-build
+export/*
+public/*
+vendor/*
+source/styleguide/*
+config/*.json
 
 # Pattern Lab (ignored initially)
 pattern-lab
