POWR-214 Added npm script to start the patternlab

--- a/web/themes/custom/rain/package.json
+++ b/web/themes/custom/rain/package.json
@@ -47,6 +47,7 @@
   },
   "scripts": {
     "start": "gulp css",
+    "patternlab": "composer start",
     "postinstall": "./scripts/pattern_lab.sh && ./scripts/twig_functions.sh"
   },
   "precommit.silent": true
