--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -22,7 +22,7 @@ mode: default
 content:
   field_body:
     weight: 0
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
