POWR-87 Update permission for all group types

--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -12,19 +12,28 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  1: 'edit group'
-  2: 'view group'
-  3: 'administer members'
-  4: 'update own group_membership content'
-  5: 'leave group'
-  6: 'view group_membership content'
-  7: 'access group_node overview'
-  8: 'create group_node:city_service entity'
-  9: 'delete any group_node:city_service entity'
-  10: 'delete own group_node:city_service entity'
-  11: 'update any group_node:city_service entity'
-  12: 'update own group_node:city_service entity'
-  13: 'view group_node:city_service entity'
-  14: 'view unpublished group_node:city_service entity'
-  15: 'create group_node:city_service content'
-  16: 'view group_node:city_service content'
+  0: 'edit group'
+  1: 'view group'
+  2: 'administer members'
+  3: 'update own group_membership content'
+  4: 'leave group'
+  5: 'view group_membership content'
+  6: 'access group_node overview'
+  7: 'create group_node:city_service entity'
+  8: 'delete any group_node:city_service entity'
+  9: 'delete own group_node:city_service entity'
+  10: 'update any group_node:city_service entity'
+  11: 'update own group_node:city_service entity'
+  12: 'view group_node:city_service entity'
+  13: 'view unpublished group_node:city_service entity'
+  14: 'create group_node:city_service content'
+  15: 'view group_node:city_service content'
+  23: 'create group_node:news entity'
+  24: 'delete any group_node:news entity'
+  25: 'delete own group_node:news entity'
+  26: 'update any group_node:news entity'
+  27: 'update own group_node:news entity'
+  28: 'view group_node:news entity'
+  29: 'view unpublished group_node:news entity'
+  30: 'create group_node:news content'
+  31: 'view group_node:news content'
