--- a/web/sites/default/config/group.role.bureau_office-outsider.yml
+++ b/web/sites/default/config/group.role.bureau_office-outsider.yml
@@ -12,5 +12,6 @@ audience: outsider
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  - 'view group'
-  - 'view group_node:city_service entity'
+  0: 'view group'
+  1: 'view group_node:city_service entity'
+  3: 'view group_node:news entity'
