--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -12,5 +12,19 @@ audience: member
 group_type: project
 permissions_ui: true
 permissions:
-  - 'view group'
-  - 'leave group'
+  0: 'view group'
+  1: 'leave group'
+  4: 'create group_node:news entity'
+  5: 'delete any group_node:news entity'
+  6: 'delete own group_node:news entity'
+  7: 'update any group_node:news entity'
+  8: 'update own group_node:news entity'
+  9: 'view group_node:news entity'
+  10: 'view unpublished group_node:news entity'
+  11: 'create group_node:city_service entity'
+  12: 'delete any group_node:city_service entity'
+  13: 'delete own group_node:city_service entity'
+  14: 'update any group_node:city_service entity'
+  15: 'update own group_node:city_service entity'
+  16: 'view group_node:city_service entity'
+  17: 'view unpublished group_node:city_service entity'
