--- a/web/sites/default/config/group.role.project-outsider.yml
+++ b/web/sites/default/config/group.role.project-outsider.yml
@@ -12,4 +12,6 @@ audience: outsider
 group_type: project
 permissions_ui: true
 permissions:
-  - 'view group'
+  0: 'view group'
+  2: 'view group_node:news entity'
+  3: 'view group_node:city_service entity'
