--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -12,6 +12,13 @@ audience: member
 group_type: elected_official
 permissions_ui: true
 permissions:
-  - 'view group'
-  - 'leave group'
-  - 'access group_node overview'
+  0: 'view group'
+  1: 'leave group'
+  2: 'access group_node overview'
+  6: 'create group_node:news entity'
+  7: 'delete any group_node:news entity'
+  8: 'delete own group_node:news entity'
+  9: 'update any group_node:news entity'
+  10: 'update own group_node:news entity'
+  11: 'view group_node:news entity'
+  12: 'view unpublished group_node:news entity'
