--- a/web/sites/default/config/group.role.elected_official-outsider.yml
+++ b/web/sites/default/config/group.role.elected_official-outsider.yml
@@ -12,4 +12,5 @@ audience: outsider
 group_type: elected_official
 permissions_ui: true
 permissions:
-  - 'view group'
+  0: 'view group'
+  2: 'view group_node:news entity'
