POWR-135 implement maxlength on groups and service

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - group.type.bureau_office
   module:
     - chosen_field
+    - maxlength
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
@@ -43,7 +44,12 @@ content:
     settings:
       rows: 2
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
     type: string_textarea
     region: content
   field_topics:
