--- a/web/sites/default/config/field.field.group.bureau_office.field_summary.yml
+++ b/web/sites/default/config/field.field.group.bureau_office.field_summary.yml
@@ -16,7 +16,7 @@ field_name: field_summary
 entity_type: group
 bundle: bureau_office
 label: Summary
-description: 'Brief description of bureau/office from a community point of view (300 character limit)'
+description: 'Brief description of bureau/office from a community point of view.'
 required: true
 translatable: false
 default_value: {  }
