--- a/web/sites/default/config/field.field.group.elected_official.field_summary.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_summary.yml
@@ -16,7 +16,7 @@ field_name: field_summary
 entity_type: group
 bundle: elected_official
 label: Summary
-description: 'Brief introduction of the elected official (300 character limit)'
+description: 'Brief introduction of the elected official.'
 required: true
 translatable: true
 default_value: {  }
