--- a/web/sites/default/config/field.field.group.program.field_summary.yml
+++ b/web/sites/default/config/field.field.group.program.field_summary.yml
@@ -16,7 +16,7 @@ field_name: field_summary
 entity_type: group
 bundle: program
 label: Summary
-description: ''
+description: 'A brief description of the program from a community point of view.'
 required: true
 translatable: true
 default_value: {  }
