--- a/web/sites/default/config/field.field.group.project.field_summary.yml
+++ b/web/sites/default/config/field.field.group.project.field_summary.yml
@@ -16,7 +16,7 @@ field_name: field_summary
 entity_type: group
 bundle: project
 label: Summary
-description: 'A short description for the project. The length of text is limited to 300 characters.'
+description: 'A brief description of the project from a community point of view.'
 required: true
 translatable: true
 default_value: {  }
