--- a/web/sites/default/config/field.field.node.city_service.field_summary.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_summary.yml
@@ -16,7 +16,7 @@ field_name: field_summary
 entity_type: node
 bundle: city_service
 label: Summary
-description: 'Brief description from a community point of view (300 character limit)'
+description: 'Brief description from a community point of view.'
 required: false
 translatable: false
 default_value: {  }
