--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/lightning_media": "~2.1",
         "drupal/link_class": "^1.3",
+        "drupal/maxlength": "^1.0",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.1",
         "drupal/prepopulate": "^2.0",
