--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - group.type.program
   module:
     - chosen_field
+    - maxlength
 id: group.program.default
 targetEntityType: group
 bundle: program
@@ -32,9 +33,14 @@ content:
   field_summary:
     weight: 2
     settings:
-      rows: 5
+      rows: 2
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
     region: content
     type: string_textarea
   field_topics:
