--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -12,6 +12,7 @@ dependencies:
   module:
     - chosen_field
     - datetime_range
+    - maxlength
 id: group.project.default
 targetEntityType: group
 bundle: project
@@ -40,9 +41,14 @@ content:
   field_summary:
     weight: 3
     settings:
+      rows: 2
       placeholder: ''
-      rows: 5
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
     type: string_textarea
     region: content
   field_topics:
