--- a/web/sites/default/config/core.entity_form_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.guide.default.yml
@@ -50,7 +50,12 @@ content:
     settings:
       rows: 2
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
     type: string_textarea
     region: content
   field_topics:
