--- a/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.teaser.yml
@@ -8,6 +8,8 @@ dependencies:
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_related_content
     - field.field.node.city_service.field_service_mode
+    - field.field.node.city_service.field_summary
+    - field.field.node.city_service.field_time_to_complete
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
@@ -23,13 +25,22 @@ id: node.city_service.teaser
 targetEntityType: node
 bundle: city_service
 mode: teaser
-content: {  }
+content:
+  field_summary:
+    type: string
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
   field_audience: true
   field_community_actions: true
   field_related_content: true
   field_sections: true
   field_service_mode: true
+  field_time_to_complete: true
   field_topics: true
   links: true
   scheduled_publication: true
