POWR-227 QuickSilver and Slack notification

--- a/pantheon.yml
+++ b/pantheon.yml
@@ -5,3 +5,10 @@ api_version: 1
 web_docroot: true
 
 php_version: 7.1
+
+workflows:
+  deploy:
+    after:
+      - type: webphp
+        description: Post deployment notification to Slack
+        script: private/scripts/slack_deploy_notification.php
