POWR-227 Add more QuickSilver events

--- a/pantheon.yml
+++ b/pantheon.yml
@@ -7,7 +7,27 @@ web_docroot: true
 php_version: 7.1
 
 workflows:
+  clear_cache:
+    after:
+      - type: webphp
+        description: Post deployment notification to Slack
+        script: private/scripts/slack_deploy_notification.php
+  clone_database:
+    after:
+      - type: webphp
+        description: Post deployment notification to Slack
+        script: private/scripts/slack_deploy_notification.php
+  create_cloud_development_environment:
+    after:
+      - type: webphp
+        description: Post deployment notification to Slack
+        script: private/scripts/slack_deploy_notification.php
   deploy:
+    after:
+      - type: webphp
+        description: Post deployment notification to Slack
+        script: private/scripts/slack_deploy_notification.php
+  sync_code:
     after:
       - type: webphp
         description: Post deployment notification to Slack
