POWR-87 Add Created and Updated label. Remove paragraph text separator.

--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -391,7 +391,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: ''
+          label: 'Created at '
           exclude: false
           alter:
             alter_text: false
@@ -458,7 +458,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: ''
+          label: 'Updated at '
           exclude: false
           alter:
             alter_text: false
@@ -578,7 +578,7 @@ display:
           delta_reversed: false
           delta_first_last: false
           multi_type: separator
-          separator: ', '
+          separator: ''
           field_api_classes: false
           plugin_id: field
     cache_metadata:
