POWR-214 Added extra scripts for managing the theme build

--- a/web/themes/custom/rain/package.json
+++ b/web/themes/custom/rain/package.json
@@ -47,8 +47,13 @@
   },
   "scripts": {
     "start": "gulp css",
-    "patternlab": "composer start",
-    "postinstall": "./scripts/pattern_lab.sh && ./scripts/twig_functions.sh"
+    "pl:start": "composer start",
+    "pl:install": "composer install",
+    "pl:upgrade": "composer update",
+    "pl:generate": "composer generate",
+    "pl:publish": "rm -rf dist/ & cp -r source/ dist/",
+    "drupal:build": "gulp css",
+    "postinstall": "./scripts/twig_functions.sh"
   },
   "precommit.silent": true
 }
