POWR-87 Resolve conflict with Guide content type

--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -37,3 +37,13 @@ permissions:
   29: 'view unpublished group_node:news entity'
   30: 'create group_node:news content'
   31: 'view group_node:news content'
+  32: 'create group_node:guide entity'
+  33: 'delete any group_node:guide entity'
+  34: 'delete own group_node:guide entity'
+  35: 'update any group_node:guide entity'
+  36: 'update own group_node:guide entity'
+  37: 'view group_node:guide entity'
+  38: 'view unpublished group_node:guide entity'
+  39: 'create group_node:guide content'
+  41: 'view group_node:guide content'
+  
