--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -29,3 +29,10 @@ permissions:
   17: 'update own group_node:news entity'
   18: 'view group_node:news entity'
   19: 'view unpublished group_node:news entity'
+  20: 'create group_node:guide entity'
+  21: 'delete any group_node:guide entity'
+  22: 'delete own group_node:guide entity'
+  23: 'update any group_node:guide entity'
+  24: 'update own group_node:guide entity'
+  25: 'view group_node:guide entity'
+  26: 'view unpublished group_node:guide entity'
