--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -82,6 +82,7 @@ display:
               service_location: default
               information: default
               news: default
+              guide: default
       fields:
         rendered:
           table: search_api_index_content
