--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -74,11 +74,13 @@ processor_settings:
     fields:
       - rendered
       - label
+    spaces: ''
+    overlap_cjk: 1
+    minimum_word_size: '3'
     weights:
-      preprocess_index: -9
-      preprocess_query: -8
+      preprocess_index: -6
+      preprocess_query: -5
     all_fields: false
-  rendered_item: {  }
   stopwords:
     fields:
       - rendered
@@ -135,12 +137,9 @@ processor_settings:
     fields:
       - rendered
       - label
-    spaces: ''
-    overlap_cjk: 1
-    minimum_word_size: '3'
     weights:
-      preprocess_index: -6
-      preprocess_query: -5
+      preprocess_index: -4
+      preprocess_query: -3
     all_fields: false
   content_access:
     weights:
@@ -149,9 +148,17 @@ processor_settings:
     fields:
       - rendered
       - label
+    title: true
+    alt: true
+    tags:
+      h1: 5
+      h2: 3
+      h3: 2
+      strong: 2
+      b: 2
     weights:
-      preprocess_index: -4
-      preprocess_query: -3
+      preprocess_index: -10
+      preprocess_query: -9
     all_fields: false
 tracker_settings:
   default:
