--- a/web/sites/default/config/pathauto.pattern.group_news.yml
+++ b/web/sites/default/config/pathauto.pattern.group_news.yml
@@ -1,4 +1,4 @@
-uuid: 5438b547-319c-420e-b2ca-66f24f0ff05a
+5uuid: 5438b547-319c-420e-b2ca-66f24f0ff05a
 langcode: en
 status: true
 dependencies:
@@ -18,5 +18,5 @@ selection_criteria:
       node: node
     uuid: 76d37fba-9d4b-45f4-a04c-654bd277f2a5
 selection_logic: and
-weight: -8
+weight: -5
 relationships: {  }
