POWR-87 Add news content type (#103)
* POWR-87 Add news content type

* POWR-87 Add news content type

* POWR-87 Create shortname using PathAuto Alias Cleaner service

* POWR-87 Add news content type

* POWR-87 Create shortname using PathAuto Alias Cleaner service

* POWR-87 Remove the obsolete services view config file.

* POWR-87 Remove obsolete
views.view.services.yml

* POWR-87 Add no-rename to git rebase.

* POWR-87 Add a template for News content type to display date/time

* POWR-87 Update permission for all group types

* POWR-87 Add Created and Updated label. Remove paragraph text separator.

* POWR-87 Resolve conflict with Guide content type

* POWR-87 Update search_api.index.content.yml to match Master

* POWR-87 Move Group News pattern before Content

* POWR-87 Restore weight for New pattern

* POWR-87 Pattern order

* POWR-87 Raise News pattern order

* POWR-87 Increase wait time on Pantheon

--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -28,12 +28,22 @@ permissions:
   13: 'view unpublished group_node:city_service entity'
   14: 'create group_node:city_service content'
   15: 'view group_node:city_service content'
-  23: 'create group_node:guide entity'
-  24: 'delete any group_node:guide entity'
-  25: 'delete own group_node:guide entity'
-  26: 'update any group_node:guide entity'
-  27: 'update own group_node:guide entity'
-  28: 'view group_node:guide entity'
-  29: 'view unpublished group_node:guide entity'
-  30: 'create group_node:guide content'
-  31: 'view group_node:guide content'
+  23: 'create group_node:news entity'
+  24: 'delete any group_node:news entity'
+  25: 'delete own group_node:news entity'
+  26: 'update any group_node:news entity'
+  27: 'update own group_node:news entity'
+  28: 'view group_node:news entity'
+  29: 'view unpublished group_node:news entity'
+  30: 'create group_node:news content'
+  31: 'view group_node:news content'
+  32: 'create group_node:guide entity'
+  33: 'delete any group_node:guide entity'
+  34: 'delete own group_node:guide entity'
+  35: 'update any group_node:guide entity'
+  36: 'update own group_node:guide entity'
+  37: 'view group_node:guide entity'
+  38: 'view unpublished group_node:guide entity'
+  39: 'create group_node:guide content'
+  41: 'view group_node:guide content'
+  
