--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -22,10 +22,17 @@ permissions:
   7: 'view group_node:city_service entity'
   8: 'view unpublished group_node:city_service entity'
   9: 'delete any group_node:city_service entity'
-  13: 'create group_node:guide entity'
-  14: 'delete any group_node:guide entity'
-  15: 'delete own group_node:guide entity'
-  16: 'update any group_node:guide entity'
-  17: 'update own group_node:guide entity'
-  18: 'view group_node:guide entity'
-  19: 'view unpublished group_node:guide entity'
+  13: 'create group_node:news entity'
+  14: 'delete any group_node:news entity'
+  15: 'delete own group_node:news entity'
+  16: 'update any group_node:news entity'
+  17: 'update own group_node:news entity'
+  18: 'view group_node:news entity'
+  19: 'view unpublished group_node:news entity'
+  20: 'create group_node:guide entity'
+  21: 'delete any group_node:guide entity'
+  22: 'delete own group_node:guide entity'
+  23: 'update any group_node:guide entity'
+  24: 'update own group_node:guide entity'
+  25: 'view group_node:guide entity'
+  26: 'view unpublished group_node:guide entity'
