--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -27,6 +27,7 @@ field_settings:
           building: default
           service_location: default
           information: default
+          news: default
           guide: default
   label:
     label: Label
