--- a/web/sites/default/config/group.role.bureau_office-outsider.yml
+++ b/web/sites/default/config/group.role.bureau_office-outsider.yml
@@ -14,4 +14,5 @@ permissions_ui: true
 permissions:
   0: 'view group'
   1: 'view group_node:city_service entity'
+  2: 'view group_node:news entity'
   3: 'view group_node:guide entity'
