--- a/web/sites/default/config/user.role.layout_manager.yml
+++ b/web/sites/default/config/user.role.layout_manager.yml
@@ -15,4 +15,5 @@ permissions:
   - 'administer panelizer node city_service defaults'
   - 'administer panelizer node guide defaults'
   - 'administer panelizer node information defaults'
+  - 'administer panelizer node news defaults'
   - 'administer panelizer node service_location defaults'
