--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -81,6 +81,7 @@ display:
               building: default
               service_location: default
               information: default
+              news: default
               guide: default
       fields:
         rendered:
