--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,7 @@ behat_tests: &behat_tests
           else
             echo 'export BEHAT_PARAMS="{\"extensions\" : {\"Behat\\\MinkExtension\" : {\"base_url\" : \"https://${CIRCLE_BRANCH}-portlandor.pantheonsite.io\"}}}"' >> $BASH_ENV && source $BASH_ENV
           fi
-          # echo $BEHAT_PARAMS
+          echo $BEHAT_PARAMS
           behat -c tests/behat.yml
     - save_cache: *save_cache
     - store_test_results:
