Push to Dev site

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ behat_tests: &behat_tests
           git rm -r --cache web/sites/default/files --ignore-unmatch
           git commit -m "CircleCI deployment" --quiet
           # When commit on master, we deploy to DEV
-          if [[ $CIRCLE_BRANCH = "master" ]]; then
+          if [[ $CIRCLE_BRANCH = "ci-hotfix" ]]; then
             echo "Deploy to Pantheon DEV site"
             # Set the connection type to GIT
             terminus connection:set portlandor.dev git
